执行器Commandhandler示例任务优化，修复极端情况下脚本进程挂起问题；